ft_container/test1/logs.txt
In file included from ../vector_tests/operator >=.cpp:1:
In file included from ../vector_tests/../system/system_methods.ipp:2:
In file included from ../vector_tests/../system/lib.hpp:30:
../vector_tests/../system/Alloc.hpp:55:27: warning: variadic templates are a C++11 extension [-Wc++11-extensions]
template <class _Up, class... _Args>
                          ^
../vector_tests/../system/Alloc.hpp:58:34: warning: rvalue references are a C++11 extension [-Wc++11-extensions]
        construct(_Up* __p, _Args&&... __args)
                                 ^
../vector_tests/../system/Alloc.hpp:164:27: warning: variadic templates are a C++11 extension [-Wc++11-extensions]
template <class _Up, class... _Args>
                          ^
../vector_tests/../system/Alloc.hpp:167:34: warning: rvalue references are a C++11 extension [-Wc++11-extensions]
        construct(_Up* __p, _Args&&... __args)
                                 ^
In file included from ../vector_tests/operator >=.cpp:1:
../vector_tests/../system/system_methods.ipp:8:2: warning: 'auto' type specifier is a C++11 extension [-Wc++11-extensions]
        auto begin = v.begin();
        ^
5 warnings generated.
erated.
 no member named 'swap' in 'ft::vector<int>'
    vector.swap(tmp);
    ~~~~~~ ^
../vector_tests/swap().cpp:72:57: note: in instantiation of function template specialization 'swap_test<int>' requested here
    exit(run_vector_unit_test<int>("swap()", swap_test, swap_test));
                                                        ^
../vector_tests/swap().cpp:54:12: error: no member named 'swap' in 'ft::vector<int>'
    vector.swap(tmp3);
    ~~~~~~ ^
5 warnings and 2 errors generated.
ed here
    v.push_back(*(vector.erase(vector.begin() + 8 * _ratio)));
                         ^
../vector_tests/erase(value).cpp:34:66: note: in instantiation of function template specialization 'erase_test_1<int>' requested here
    exit(run_vector_unit_test<int>("erase(value)", erase_test_1, erase_test_1));
                                                                 ^
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/__iterator/move_iterator.h:172:1: note: candidate template ignored: could not match 'move_iterator' against 'random_access_iterator'
operator+(typename move_iterator<_Iter>::difference_type __n, const move_iterator<_Iter>& __x)
^
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/__iterator/reverse_iterator.h:221:1: note: candidate template ignored: could not match 'reverse_iterator' against 'random_access_iterator'
operator+(typename reverse_iterator<_Iter>::difference_type __n, const reverse_iterator<_Iter>& __x)
^
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/__iterator/wrap_iter.h:278:21: note: candidate template ignored: could not match '__wrap_iter' against 'random_access_iterator'
__wrap_iter<_Iter1> operator+(typename __wrap_iter<_Iter1>::difference_type __n, __wrap_iter<_Iter1> __x) _NOEXCEPT
                    ^
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/string:4269:1: note: candidate template ignored: could not match 'basic_string' against 'random_access_iterator'
operator+(const basic_string<_CharT, _Traits, _Allocator>& __lhs,
^
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/string:4282:1: note: candidate template ignored: could not match 'const _CharT *' against 'ft::vector<int>::iterator' (aka 'random_access_iterator<int>')
operator+(const _CharT* __lhs , const basic_string<_CharT,_Traits,_Allocator>& __rhs)
^
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/string:4294:1: note: candidate template ignored: could not match 'basic_string' against 'random_access_iterator'
operator+(_CharT __lhs, const basic_string<_CharT,_Traits,_Allocator>& __rhs)
^
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/string:4306:1: note: candidate template ignored: could not match 'basic_string' against 'random_access_iterator'
operator+(const basic_string<_CharT, _Traits, _Allocator>& __lhs, const _CharT* __rhs)
^
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/string:4318:1: note: candidate template ignored: could not match 'basic_string' against 'random_access_iterator'
operator+(const basic_string<_CharT, _Traits, _Allocator>& __lhs, _CharT __rhs)
^
../vector_tests/../../../src/vector/../utils/ft_reverse_iterator.hpp:131:1: note: candidate template ignored: could not match 'reverse_iterator' against 'random_access_iterator'
operator+(typename reverse_iterator<Iter>::difference_type __n,
^
../vector_tests/../../../src/vector/../utils/ft_random_access_iterator.hpp:48:28: note: candidate function not viable: no known conversion from 'ft::vector<int>::iterator' (aka 'random_access_iterator<int>') to 'size_t' (aka 'unsigned long') for 1st argument
    random_access_iterator operator+(size_t n) const
                           ^
../vector_tests/../../../src/vector/../utils/ft_random_access_iterator.hpp:58:28: note: candidate function not viable: no known conversion from 'ft::vector<int>::iterator' (aka 'random_access_iterator<int>') to 'int' for 1st argument
    random_access_iterator operator+(int n) const
                           ^
../vector_tests/../../../src/vector/../utils/ft_random_access_iterator.hpp:118:19: note: candidate function not viable: no known conversion from 'ft::vector<int>::iterator' (aka 'random_access_iterator<int>') to 'ft::random_access_iterator::difference_type' (aka 'long') for 1st argument
    iterator_type operator+(difference_type n) const { 
                  ^
5 warnings and 1 error generated.
